# freecad.gencad

./: GenCADCommands.py  GenCADConfig.py  GenCADDialog.py  GenCADProgressDialog.py  Init.py  InitGui.py  README.md  not_a_code .txt  package.xml
cadomatic/: README.md  REFERENCE  pyproject.toml
cadomatic/prompts/: base_instruction.txt  modify_instruction.txt  verify_instruction.txt
cadomatic/prompts/options/: bake_part.txt  build_tree.txt  sketcher_and_primitives.txt  use_fasteners_wb.txt  use_part.txt  use_partdesign.txt  use_placement_circle.txt  use_polarpattern.txt  use_primitives.txt  use_sketches.txt
cadomatic/src/: dependency_checker.py  generation_gui.py  llm_client.py  load_environment.py  part_verify.py  rag_builder.py  rag_extender.py
cadomatic/src/image_compare/: vlm_client.py
cadomatic/test/: test_qwen3_support.py  test_workbench.py  test_workbench_fixed.py
utils/: objects_to_python.py
