[project]
name = "cadomatic"
version = "0.1.0"
description = "This is a code to create editable CAD files from natural language prompts"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.1.1",
    "langchain>=0.3.27",
    "langchain-ollama",
    "langchain-community>=0.3.27",
    "langchain-huggingface>=0.3.1",
    "langgraph>=0.6.6",    
    "faiss-cpu>=1.11.0",
    "huggingface-hub>=0.34.3",
    "requests>=2.32.5",
    "pydantic>=2.11.7",
    "openai",
]

# Optional dependency groups for dev/test
[dependency-groups]
rag = [
    "sentence-transformers>=5.1.0",
]
dev = [
    "beautifulsoup4>=4.13.4",
    "sentence-transformers>=5.1.0",    
    "debugpy",
]
test = [
    "pytest>=8.4.2",
]